--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 
+.filepond--root {
+  height: 150px;
+  cursor: pointer;
+  /* layout*/
+  box-sizing: border-box;
+  position: relative;
+  margin-bottom: 1em;
+
+  /* base font size for whole component */
+  font-size: 1rem;
+
+  /* base line height */
+  line-height: normal;
+
+  /* up uses default system font family */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+  /* will increase font weight a bit on Safari */
+  font-weight: 450;
+
+  /* default text alignment */
+  text-align: left;
+
+  /* better text rendering on Safari */
+  text-rendering: optimizeLegibility;
+
+  /* text direction is ltr for now */
+  direction: ltr;
+
+  /* optimize rendering */
+  /* https://developer.mozilla.org/en-US/docs/Web/CSS/contain */
+  contain: layout style size;
+}
+
+.filepond--drop-label {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: 0;
+  color: black;
+
+  /* center contents */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+
+  /* fixes IE11 centering problems (is overruled by label min-height) */
+  height: 100%;
+
+  /* dont allow selection */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  /* will be animated */
+  will-change: transform, opacity;
+}
+
+.filepond--panel-root {
+  background-color: #e5e5e5;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -97,6 +163,10 @@
     100% {
       transform: rotate(360deg);
     }
+  }
+
+  .filepond--item-panel {
+    background: #000;
   }
 
   .spinner {
