membuat UI Account di route setting-profile/account dan mengupdate setting-profile navbar.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,5 +105,5 @@
 }
 
 .active-link {
-  @apply bg-buttonBg border-borderButton text-textButton;
+  @apply bg-buttonBg border border-borderButton text-textButton;
 }
